Fixed logo image size and navigation bar overflow also added a .gitignore file

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,10 +105,6 @@ ul, ol {
     list-style: none;
 }
 
-header img {
-    height: 50px;
-}
-
 #menu {
     color: var(--purple-600);
     margin-top: 8px;
@@ -177,7 +173,7 @@ header img {
     border: none;
 }
 
-.logo img {
+.topbar > .logo img {
     height: 50px;
 }
 /****************** end topbar **********************/
